# AccoGen

./: .gitignore  README.md  pyproject.toml
src/: app.py  main.py  session_manager.py
src/models/: enums.py  param.py
src/services/: account_name_generator.py
