[project]
name = "accogen"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "NShohei", email = "nodasyohei4130@gmail.com" }
]
dependencies = [
    "streamlit>=1.32.0",
    "pydantic>=2.6.3",
    "pytest>=8.0.2",
    "faker>=24.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.2",
    "Pyinstaller>=6.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/accogen"]

[tool.pytest.ini_options]
pythonpath = "src"
